--- a/templates/matiere/index.html.twig
+++ b/templates/matiere/index.html.twig
@@ -13,6 +13,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
+        color: #2d3436 !important;
     }
 </style>
 {% for type, messages in app.flashes %}
