--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,7 @@
         {% block stylesheets %}
         <style>
             body{background-color: #2d3436; color: #dfe6e9;}
+            .navbar{padding: 1rem;}
         </style>
         {% endblock %}
         
